--- a/client/src/components/PokemonInfo/pokemonInfo.css
+++ b/client/src/components/PokemonInfo/pokemonInfo.css
@@ -1,8 +1,23 @@
+.pokemon-search {
+ width: 100%;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ color: aliceblue;
+ margin-top: 15vw;
+ margin-bottom: 15vw;
+}
+
 .search-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius:10px;
-    font-size: 20px;
+    padding: 0 5px 10px 5px;
+    font-family: 'Pokemon Solid','Press Start 2P', cursive;
+    font-size: 1.25rem;
+    height: 10vw;
     border: none;
-    color: black;
     background-color: lightgrey;
     margin: 20px;
     cursor: pointer;
@@ -10,6 +25,7 @@
 
 .pokemon-info h1{
     font-size: 1.15rem;
+    color: aliceblue;
     margin: 10px;
     padding: 5px;
 }
@@ -25,10 +41,17 @@
     font-size: 1.85rem;
 }
 
+#poke-type {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .poke-img {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 15vw;
 }
 
 .pokemon-img {
@@ -36,20 +59,57 @@
 }
 
 @media screen and (min-width: 425px){ 
+    .pokemon-search {
+        margin-top: 10vw;
+        margin-bottom: 10vw;
+    }
     #poke-name {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
     .pokemon-img {
         width: 50vw;
     }
+    .poke-img {
+        margin-bottom: 5vw;
+    }
+    .search-btn {
+        font-size: 1.5rem;
+        height: 8vw;
+    }
 }
 
 @media screen and (min-width: 768px){
+    .pokemon-search {
+        margin-top: 5vw;
+        margin-bottom: 5vw;
+    }
     #poke-name {
-        font-size: 2.5rem;
+        font-size: 2.75rem;
     } 
     .pokemon-img {
         width: 30vw;
+    }
+    .poke-img {
+        margin-bottom: 5vw;
+    }
+    .search-btn {
+        font-size: 1.75rem;
+        height: 6vw;
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .pokemon-search {
+        margin-top: 3vw;
+        margin-bottom: 3vw;
+    }
+    .poke-img {
+        margin-bottom: 3vw;
+    }
+    .search-btn {
+        font-size: 2rem;
+        height: 4vw;
+        
     }
 }
 
