--- a/client/src/pages/HomePage/homePage.css
+++ b/client/src/pages/HomePage/homePage.css
@@ -1,12 +1,16 @@
 .poke-home {
-  font-size: 8px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  font-size: 4px;
   font-family: 'Press Start 2P', cursive;
   border-radius: 2px;
-  padding: 8px;
-  width: 250px;
-  height: 28px;
+  padding: 10px;
+  width: 90vw;
+  height: 20vw;
   line-height: 16px;
-  margin: auto;
+  margin: 80vw auto 0 auto;
   background: white;
   border: 1px solid white;
   box-shadow: 0 1px 0 1px black,
@@ -28,3 +32,157 @@
   from { margin-top: 20px; }
   to { margin-top: 23px; }
 }
+
+/* .poke-home h1 {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  border-right: .15em solid black;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: .15em;
+  animation: 
+    typing 6.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent; }
+  50% { border-color: black; }
+} */
+
+.poke-home p{
+  border-right: .15em solid black;
+  font-family:'Press Start 2P', cursive;
+  font-size: 10px;
+  margin-bottom: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.poke-home p:nth-child(1) {
+  width: 25em;
+  -webkit-animation: type 2.5s steps(40, end);
+  animation: type 2.5s steps(40, end);
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+
+.poke-home p:nth-child(2) {
+  width: 25em;
+  opacity: 0;
+  -webkit-animation: type2 2.5s steps(40, end);
+  animation: type2 2.5s steps(40, end);
+  -webkit-animation-delay: 2.5s;
+  animation-delay: 2.5s;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+
+.poke-home p:nth-child(3) {
+  width: 25em;
+  opacity: 0;
+  -webkit-animation: type3 2.5s steps(40, end), blink .5s step-end infinite alternate;
+  animation: type3 2.5s steps(40, end), blink .5s step-end infinite alternate;
+  -webkit-animation-delay: 2.5s;
+  animation-delay: 5s;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+
+@keyframes type {
+  0% {
+    width: 0;
+  }
+  99.9% {
+    border-right: .15em solid black;
+  }
+  100% {
+    border: none;
+  }
+}
+
+@-webkit-keyframes type {
+  0% {
+    width: 0;
+  }
+  99.9% {
+    border-right: .15em solid black;
+  }
+  100% {
+    border: none;
+  }
+}
+
+@keyframes type2 {
+  0% {
+    width: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  99.9% {
+    border-right: .15em solid black;
+  }
+  100% {
+    opacity: 1;
+    border: none;
+  }
+}
+
+@-webkit-keyframes type2 {
+  0% {
+    width: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  99.9% {
+    border-right: .15em solid black;
+  }
+  100% {
+    opacity: 1;
+    border: none;
+  }
+}
+
+@keyframes type3 {
+  0% {
+    width: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes type3 {
+  0% {
+    width: 0;
+  }
+  1% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+@-webkit-keyframes blink {
+  50% {
+    border-color: tranparent;
+  }
+}
+
+
