made chnages to the look of the website to fit more better on mobile and other screen sizes

--- a/client/src/pages/SearchPokemon/searchPokemon.css
+++ b/client/src/pages/SearchPokemon/searchPokemon.css
@@ -10,7 +10,7 @@
  flex-direction: column;
  align-items: center;
  color: aliceblue;
- margin-top: 15vw;
+ margin-top: 5vw;
 }
 
 /* .pokemon-title input {
@@ -39,16 +39,16 @@
   }
 }
 
-@media screen and (min-width: 768px){
+/* @media screen and (min-width: 768px){
   .pokemon-title {
     margin-top: 10vw;
     font-size: 1.5rem;
   }
-}
+} */
 
 @media screen and (min-width: 768px){
   .pokemon-title {
-    margin-top: 5vw;
+    margin-top: 2vw;
     font-size: 2rem;
   }
 }
