--- a/client/src/components/PokemonInfo/pokemonInfo.css
+++ b/client/src/components/PokemonInfo/pokemonInfo.css
@@ -4,8 +4,8 @@
  flex-direction: column;
  align-items: center;
  color: aliceblue;
- margin-top: 15vw;
- margin-bottom: 15vw;
+ /* margin-top: 5vw; */
+ /* margin-bottom: 0vw; */
 }
 
 .search-btn {
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     border-radius:10px;
-    padding: 0 5px 10px 5px;
+    padding: 3px 5px 0 5px;
     font-family: 'Pokemon Solid','Press Start 2P', cursive;
     font-size: 1.25rem;
     height: 10vw;
@@ -31,6 +31,7 @@
 .pokemon-info h1, h2{
     color: aliceblue;
     margin: 10px;
+    margin-top: 0;
     padding: 5px;
 }
 
@@ -56,17 +57,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 15vw;
+    margin-bottom: 5vw;
 }
 
 .pokemon-img {
     width: 75vw;
 }
 
-@media screen and (min-width: 425px){ 
+.viewBtn {
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media only screen and (min-width: 425px) and (max-width: 1440px) {
     .pokemon-search {
-        margin-top: 10vw;
-        margin-bottom: 10vw;
+        margin-bottom: 2vw;
     }
     #poke-name {
         font-size: 2.5rem;
@@ -78,49 +84,53 @@
         font-size: 1.4rem;
     }
     .pokemon-img {
-        width: 50vw;
-    }
-    .poke-img {
-        margin-bottom: 5vw;
+        width: 70vw;
     }
     .search-btn {
         font-size: 1.5rem;
-        height: 8vw;
     }
 }
 
 @media screen and (min-width: 768px){
     .pokemon-search {
-        margin-top: 5vw;
-        margin-bottom: 5vw;
+        /* margin-top: 2vw; */
+        margin-bottom: 4vw;
     }
     #poke-name {
-        font-size: 2.75rem;
-    } 
-    .pokemon-img {
-        width: 30vw;
+        font-size: 2.5rem;
     }
-    .poke-img {
-        margin-bottom: 5vw;
+    #poke-type {
+        font-size: 1.25rem;
+    }
+    .no-pokemon{
+        font-size: 1.7rem;
     }
     .search-btn {
-        font-size: 1.75rem;
-        height: 6vw;
+        font-size: 2rem;
+        height: 5vw;
     }
 }
 
 @media screen and (min-width: 1024px){
-    .pokemon-search {
-        margin-top: 3vw;
-        margin-bottom: 3vw;
+     .pokemon-search {
+        margin-top: 2vw;
+        margin-bottom: 2vw;
     }
-    .poke-img {
-        margin-bottom: 3vw;
+    #poke-name {
+        font-size: 3rem;
     }
-    .search-btn {
+    #poke-type {
+        font-size: 1.5rem;
+    }
+    /* 
+    .no-pokemon{
         font-size: 2rem;
-        height: 4vw;
-        
+    } */
+    .search-btn {
+        height: 3vw;
+    }
+      .pokemon-img {
+        width: 30vw;
     }
 }
 
