--- a/client/src/pages/HomePage/homePage.css
+++ b/client/src/pages/HomePage/homePage.css
@@ -1,22 +1,18 @@
 .poke-home {
-  display: flex;
+  /* display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-direction: column;
-  font-size: 4px;
-  font-family: 'Press Start 2P', cursive;
+  flex-direction: column; */
+  font-family: "Press Start 2P", cursive;
   border-radius: 2px;
-  padding: 10px;
-  width: 90vw;
-  height: 20vw;
-  line-height: 16px;
-  margin: 80vw auto 0 auto;
+  margin: 10vw 5px 5vw 5px;
+  padding: 10px 10px 0 10px;
+  height: 30vw;
+  line-height: 20px;
+  text-align: center;
   background: white;
   border: 1px solid white;
-  box-shadow: 0 1px 0 1px black,
-              inset 0 1px 0 1px black,
-              0 0 0 1px black,
-              inset 0 0 0 1px black;
+  box-shadow: 0 1px 0 1px black, inset 0 1px 0 1px black, 0 0 0 1px black, inset 0 0 0 1px black;
 }
 .poke-home > i {
   width: 0;
@@ -29,8 +25,12 @@
 }
 
 @keyframes bounce {
-  from { margin-top: 20px; }
-  to { margin-top: 23px; }
+  from {
+    margin-top: 20px;
+  }
+  to {
+    margin-top: 23px;
+  }
 }
 
 /* .poke-home h1 {
@@ -56,14 +56,16 @@
   50% { border-color: black; }
 } */
 
-.poke-home p{
-  border-right: .15em solid black;
-  font-family:'Press Start 2P', cursive;
-  font-size: 10px;
-  margin-bottom: 5px;
+/* Styling for home page text */
+.poke-home p {
+  border-right: 0.15em solid black;
+  font-family: "Press Start 2P", cursive;
   white-space: nowrap;
+  font-size: 0.72rem;
+  margin-bottom: 5px;
   overflow: hidden;
 }
+/* Animation for the first home page text */
 .poke-home p:nth-child(1) {
   width: 25em;
   -webkit-animation: type 2.5s steps(40, end);
@@ -71,7 +73,7 @@
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
 }
-
+/* Animation for the second home page text */
 .poke-home p:nth-child(2) {
   width: 25em;
   opacity: 0;
@@ -82,12 +84,12 @@
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
 }
-
+/* Animation for the third home page text */
 .poke-home p:nth-child(3) {
   width: 25em;
   opacity: 0;
-  -webkit-animation: type3 2.5s steps(40, end), blink .5s step-end infinite alternate;
-  animation: type3 2.5s steps(40, end), blink .5s step-end infinite alternate;
+  -webkit-animation: type3 2.5s steps(40, end), blink 0.5s step-end infinite alternate;
+  animation: type3 2.5s steps(40, end), blink 0.5s step-end infinite alternate;
   -webkit-animation-delay: 2.5s;
   animation-delay: 5s;
   -webkit-animation-fill-mode: forwards;
@@ -99,7 +101,7 @@
     width: 0;
   }
   99.9% {
-    border-right: .15em solid black;
+    border-right: 0.15em solid black;
   }
   100% {
     border: none;
@@ -111,7 +113,7 @@
     width: 0;
   }
   99.9% {
-    border-right: .15em solid black;
+    border-right: 0.15em solid black;
   }
   100% {
     border: none;
@@ -126,7 +128,7 @@
     opacity: 1;
   }
   99.9% {
-    border-right: .15em solid black;
+    border-right: 0.15em solid black;
   }
   100% {
     opacity: 1;
@@ -142,7 +144,7 @@
     opacity: 1;
   }
   99.9% {
-    border-right: .15em solid black;
+    border-right: 0.15em solid black;
   }
   100% {
     opacity: 1;
@@ -185,4 +187,78 @@
   }
 }
 
-
+@media only screen and (min-width: 375px) and (max-width: 1440px) {
+  .poke-home {
+    /* margin: 10vw 5px 0 5px; */
+    padding: 12px 10px 0 10px;
+    /* padding-right: 0; */
+    /* height: 30vw; */
+    /* line-height: 20px; */
+  }
+  .poke-home p {
+    font-size: 0.85rem;
+  }
+}
+@media only screen and (min-width: 425px) {
+  .poke-home {
+    /* margin: 10vw 5px 0 5px; */
+    margin-left: 7px;
+    margin-right: 7px;
+    padding: 15px 10px 0 10px;
+    /* padding-right: 0; */
+    /* height: 30vw; */
+    /* line-height: 20px; */
+  }
+  .poke-home p {
+    font-size: 0.95rem;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .poke-home {
+    /* margin: 10vw 5px 0 5px; */
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 12px 10px 0 10px;
+    /* padding-right: 0; */
+    /* height: 30vw; */
+    /* line-height: 20px; */
+  }
+  .poke-home p {
+    font-size: 1.50rem;
+    line-height: 2rem;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .poke-home {
+    /* margin: 10vw 5px 0 5px; */
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 12px 10px 0 20px;
+    /* padding-right: 0; */
+    /* height: 30vw; */
+    /* line-height: 20px; */
+  }
+  .poke-home p {
+    font-size: 1.75rem;
+    line-height: 2.5rem;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .poke-home {
+    /* margin: 10vw 5px 0 5px; */
+    margin-left: 20px;
+    margin-right: 20px;
+    /* padding-right: 0; */
+    /* height: 30vw; */
+    /* line-height: 20px; */
+  }
+  .poke-home p {
+    font-size: 2rem;
+    line-height: 3rem;
+  }
+}
+/* @media only screen and (min-width: 375px) and (max-width: 1440px) {
+  .poke-home p{
+    font-size: .85rem;
+  }
+} */
