--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -1,5 +1,4 @@
 .hero {
-  /* display: flex; */
   background-image: url('../../assets/images/homepage-banner.png');
   background-repeat: no-repeat;
   background-attachment:fixed;
@@ -7,5 +6,10 @@
   background-size: cover;
   overflow: hidden;
   width: 100vw;
-  /* height: 17vw; */
+}
+
+@media only screen and (min-width: 768px) and (max-width: 2560px) {
+  .hero {
+    height: 15vw;
+  }
 }
