--- a/client/src/pages/SearchPokemon/searchPokemon.css
+++ b/client/src/pages/SearchPokemon/searchPokemon.css
@@ -1,54 +1,37 @@
-.search-pokemon {
- display: flex;
- justify-content: center;
- align-items: center;
-}
-
 .pokemon-title {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  color: aliceblue;
- margin-top: 5vw;
+ margin-top: -5vw;
 }
 
-/* .pokemon-title input {
- text-align: center;
- width: 200px;
- height: 40px;
- border-radius: 15px;
- border: 2px solid aliceblue;
- font-size: 18px;
-} */
-/* @media screen and (min-width: 425px){ 
-  .pokemon-title {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: aliceblue;
-    margin-top: 15vw;
-  }
-
-} */
-
-@media screen and (min-width: 425px){ 
+@media screen and (min-width: 425px) and (max-width: 1440px){ 
   .pokemon-title {
     font-size: 1.25rem;
   }
 }
 
-/* @media screen and (min-width: 768px){
-  .pokemon-title {
-    margin-top: 10vw;
-    font-size: 1.5rem;
-  }
-} */
-
 @media screen and (min-width: 768px){
   .pokemon-title {
-    margin-top: 2vw;
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1440px){
+   .pokemon-title {
+    margin-top: -60px;
+  }
+}
+@media screen and (min-width: 1440px){
+   .pokemon-title {
     font-size: 2rem;
+  }
+}
+@media screen and (min-width: 2560px){
+   .pokemon-title {
+    margin-top: -100px;
+    font-size: 3.75rem;
   }
 }
